--- a/test2/Base.lproj/Main.storyboard
+++ b/test2/Base.lproj/Main.storyboard
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9059" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="test2" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +17,58 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="whb-yx-v9G">
+                                <rect key="frame" x="20" y="28" width="560" height="20.5"/>
+                                <animations/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="c8q-1o-aAd">
+                                <rect key="frame" x="273" y="285" width="55" height="30"/>
+                                <animations/>
+                                <state key="normal" title="Tap Me!"/>
+                                <connections>
+                                    <action selector="myButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ifQ-jU-4Qm"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jKV-Y8-xjI">
+                                <rect key="frame" x="285" y="98" width="30" height="30"/>
+                                <animations/>
+                                <connections>
+                                    <action selector="myButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="lbs-xC-f05"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="c8q-1o-aAd" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="0h8-Oo-hsl"/>
+                            <constraint firstItem="c8q-1o-aAd" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="7qp-PI-RSL"/>
+                            <constraint firstItem="whb-yx-v9G" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" id="8bQ-QX-IJv"/>
+                            <constraint firstItem="whb-yx-v9G" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="HKW-dP-CXv"/>
+                            <constraint firstItem="whb-yx-v9G" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="KdB-xh-IwZ"/>
+                            <constraint firstItem="c8q-1o-aAd" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="P5Q-jO-Mlv"/>
+                            <constraint firstItem="jKV-Y8-xjI" firstAttribute="top" secondItem="whb-yx-v9G" secondAttribute="bottom" constant="50" id="S0M-gS-uqa"/>
+                            <constraint firstItem="jKV-Y8-xjI" firstAttribute="top" secondItem="whb-yx-v9G" secondAttribute="bottom" constant="49.5" id="WCU-xB-HMg"/>
+                            <constraint firstItem="jKV-Y8-xjI" firstAttribute="top" secondItem="whb-yx-v9G" secondAttribute="bottom" constant="50" id="Xkv-JV-ogl"/>
+                            <constraint firstItem="c8q-1o-aAd" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="cRp-1t-U6y"/>
+                            <constraint firstItem="whb-yx-v9G" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="cVl-O9-LfQ"/>
+                            <constraint firstItem="whb-yx-v9G" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" id="iLD-cG-IPk"/>
+                            <constraint firstItem="c8q-1o-aAd" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="nA0-4c-2cM"/>
+                            <constraint firstItem="whb-yx-v9G" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="oxm-Xu-fgP"/>
+                            <constraint firstItem="jKV-Y8-xjI" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="vTm-jF-buK"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="whb-yx-v9G" secondAttribute="trailing" id="zZ6-I9-ZpX"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="myLabel" destination="whb-yx-v9G" id="L6M-yw-SwQ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="76" y="424"/>
         </scene>
     </scenes>
 </document>
